--- a/TccLulu-war/web/paginainicial.xhtml
+++ b/TccLulu-war/web/paginainicial.xhtml
@@ -14,8 +14,8 @@
             <p:menu>
                 <p:submenu label="CURSOS">
                     <p:menuitem value="Incluir curso" outcome="curso"/>
-                    <p:menuitem value="Solicitação de curso" outcome="curso"/>
-                    <p:menuitem value="Cursos em andamento" />
+                    <p:menuitem value="Solicitação de curso" outcome="solicitacao"/>
+                    <p:menuitem value="Cursos em andamento" outcome="andamento"/>
                     <p:menuitem value="Cursos encerrados" />
                 </p:submenu>
                 <p:submenu label="CURRÍCULO">
