--- a/TccLulu-war/web/matriz.xhtml
+++ b/TccLulu-war/web/matriz.xhtml
@@ -15,7 +15,7 @@
                     <p:messages autoUpdate="true"/>
                     <h:panelGrid>
                         <p:panel header="Matriz de cursos"> 
-                            
+
                             <h:form>
                                 <p:growl id="growl" life="2000" />     
                                 <p:commandButton value="Incluir" id="incluir"  action="curso"/>
@@ -27,7 +27,9 @@
 
                             <p:dataTable id="curso" value="#{cursoMNG.lista}" emptyMessage="Não há registros" var="curso" paginator="true" rows="4">
                                 <p:column headerText="Data Inicio">
-                                    <h:outputText value="#{curso.data_inicio}"/>
+                                    <h:outputText value="#{curso.data_inicio}">
+                                        <f:convertDateTime pattern="dd/MM/yyyy"/>
+                                    </h:outputText>
                                 </p:column>
                                 <p:column headerText="Data Fim">
                                     <h:outputText value="#{curso.data_fim}"/>
