--- a/TccLulu-war/web/padrao.xhtml
+++ b/TccLulu-war/web/padrao.xhtml
@@ -37,6 +37,9 @@
                             <p:menuitem value="2013" />
                             <p:menuitem value="2012" />                    
                         </p:submenu>
+                        <p:submenu label="CONFIGURAÇÕES">
+                            <p:menuitem value="Usuários" outcome="usuario"/>                                          
+                        </p:submenu>
                     </p:menu>
                 </h:form>              
                     
