--- a/TccLulu-war/web/curso.xhtml
+++ b/TccLulu-war/web/curso.xhtml
@@ -12,7 +12,7 @@
                     <h:form id="formulario">
                         <p:messages autoUpdate="true"/>
                         <h:panelGrid>
-                            <p:panel header="Incluir curso">
+                            <p:panel header="INCLUIR CURSO">
                                 <h:panelGrid columns="2">
                                     <h:outputLabel value="Nome"/>
                                     <p:inputText id="nome" value="#{cursoMNG.nome}"/>
