--- a/TccLulu-war/web/padrao.xhtml
+++ b/TccLulu-war/web/padrao.xhtml
@@ -37,8 +37,9 @@
                             <p:menuitem value="2013" />
                             <p:menuitem value="2012" />                    
                         </p:submenu>
-                        <p:submenu label="CONFIGURAÇÕES">
-                            <p:menuitem value="Usuários" outcome="usuario"/>                                          
+                        <p:submenu label="CADASTROS">
+                            <p:menuitem value="Usuários" outcome="usuario"/>
+                            <p:menuitem value="Salas" outcome="sala"/>
                         </p:submenu>
                     </p:menu>
                 </h:form>              
