--- a/TccLulu-war/web/matriz.xhtml
+++ b/TccLulu-war/web/matriz.xhtml
@@ -15,25 +15,27 @@
                     <p:messages autoUpdate="true"/>
                     <h:panelGrid>
                         <p:panel header="Matriz de cursos"> 
-
                             <h:form>
                                 <p:growl id="growl" life="2000" />     
                                 <p:commandButton value="Incluir" id="incluir"  action="curso"/>
-                                <p:commandButton value="Editar" id="editar" update="growl" actionListener="#{buttonView.buttonAction}" styleClass="ui-priority-primary" />
+                                <p:commandButton value="Editar" id="editar" action="editar"/>                        
                                 <p:commandButton value="Excluir" id="excluir" update="growl" actionListener="#{buttonView.buttonAction}" styleClass="ui-priority-primary" />
                                 <p:commandButton value="Inscritos" id="inscritos" action="inscritos" />
                                 <p:commandButton value="Conteúdo" id="conteudo" update="growl" actionListener="#{buttonView.buttonAction}" styleClass="ui-priority-primary" />
                                 <p:commandButton value="Inscrição" id="inscricao" action="inscricao" />
                             </h:form>  
 
-                            <p:dataTable id="curso" value="#{cursoMNG.lista}" emptyMessage="Não há registros" var="curso" paginator="true" rows="4">
+                            <p:dataTable id="curso" value="#{cursoMNG.lista}" emptyMessage="Não há registros" var="curso" paginator="true" rows="4" rowKey="#{curso.id}">
+                                <p:column selectionMode="single" style="width:16px;text-align:center"/>
                                 <p:column headerText="Data Inicio">
                                     <h:outputText value="#{curso.data_inicio}">
                                         <f:convertDateTime pattern="dd/MM/yyyy"/>
                                     </h:outputText>
                                 </p:column>
                                 <p:column headerText="Data Fim">
-                                    <h:outputText value="#{curso.data_fim}"/>
+                                    <h:outputText value="#{curso.data_fim}">
+                                        <f:convertDateTime pattern="dd/MM/yyyy"/>
+                                    </h:outputText>
                                 </p:column>
                                 <p:column headerText="Nome" filterBy="#{curso.lista}">
                                     <h:outputText value="#{curso.nome}"/>
