--- a/TccLulu-war/web/usuario.xhtml
+++ b/TccLulu-war/web/usuario.xhtml
@@ -1,18 +1,12 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
-    <f:view contentType="text/html">
-        <h:head>
-            <f:facet name="first">
-                <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
-                <title>USUÁRIOS</title>
-            </f:facet>
-        </h:head>
-        <h:body>
-            <center>                
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">     
+    <ui:composition template="/padrao.xhtml">
+        <ui:define name="centro">
+            <center margin-top='-200' style="top:-500px;position: relative">
+
                 <h:form id="formulario">
                     <p:messages autoUpdate="true"/>
                     <h:panelGrid>
@@ -26,11 +20,12 @@
                                 <p:commandButton value="LIMPAR" type="reset"/> 
                             </h:panelGrid>
 
-                        </p:panel>
+                        </p:panel> 
                     </h:panelGrid>
                 </h:form>
-            </center>
-        </h:body>
-    </f:view>
+         </center>
+
+        </ui:define>
+    </ui:composition>
 </html>
 
