--- a/TccLulu-war/web/sala.xhtml
+++ b/TccLulu-war/web/sala.xhtml
@@ -15,7 +15,7 @@
                         <p:panel header="CADASTRO DE SALAS">
                           <h:form>
                                 <p:growl id="growl" life="2000" />     
-                                <p:commandButton value="Incluir" id="incluir"  action="cadastrar_sala"/>
+                                <p:commandButton value="Incluir" id="incluir"  action="incluir_sala"/>
                                 <p:commandButton value="Editar" id="editar" update="growl" actionListener="#{buttonView.buttonAction}" styleClass="ui-priority-primary" />
                                 <p:commandButton value="Excluir" id="excluir" update="growl" actionListener="#{buttonView.buttonAction}" styleClass="ui-priority-primary" />
                             </h:form> 
