--- a/TccLulu-war/web/incluir_sala.xhtml
+++ b/TccLulu-war/web/incluir_sala.xhtml
@@ -17,7 +17,8 @@
                                     <h:outputLabel value="Nome"/> 
                                     <p:inputText id="nome" value="#{salaMNG.nome}"/>
                                     <p:commandButton value="GRAVAR" actionListener="#{salaMNG.save}" ajax="false"/>
-                                    <p:commandButton value="LIMPAR" type="reset"/> 
+                                    <p:commandButton value="LIMPAR" type="reset"/>
+                                    <p:commandButton value="CANCELAR" id="cancelar"  action="sala"/> 
                                 </h:panelGrid>
                             </p:panel>
                         </h:panelGrid> 
