--- a/TccLulu-war/web/incluir_usuario.xhtml
+++ b/TccLulu-war/web/incluir_usuario.xhtml
@@ -1,5 +1,3 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
@@ -12,21 +10,24 @@
                 <h:form id="formulario">
                     <p:messages autoUpdate="true"/>
                     <h:panelGrid>
-                        <p:panel header="LOGIN">
-                            <h:panelGrid columns="2" border="0" style="margin-left: 150px;width: 250px;height: 150px; background-image: url(images/fndLogin.png);background-repeat: no-repeat">
+                        <p:panel header="Incluir USUÁRIOS">
+                            <h:panelGrid columns="2">
+                                //tem que ter o nome completo e um grupo de permissão
                                 <h:outputLabel value="Login"/>
-                                <p:inputText id="txtLogin" value="#{usuarioMNG.login}"/>
+                                <p:inputText id="nome" value="#{usuarioMNG.login}"/> 
                                 <h:outputLabel value="Senha"/>
-                                <p:keyboard id="txtSenha" value="#{usuarioMNG.senha}"  password="true"/>
-                                <h:commandButton value="OK" action="#{usuarioMNG.valida}"/>
+                                <p:inputText id="senha" value="#{usuarioMNG.senha}"/>                               
+                                <p:commandButton value="GRAVAR" action="#{usuarioMNG.save}"/>
                                 <p:commandButton value="LIMPAR" type="reset"/> 
+                                <p:commandButton value="CANCELAR" type="reset"/> TEM Q VOLTAR PARA A LISTA DE USUARIOS
                             </h:panelGrid>
-                        </p:panel>
+
+                        </p:panel> 
                     </h:panelGrid>
                 </h:form>
-
-            </center>
+         </center>
 
         </ui:define>
     </ui:composition>
 </html>
+
