--- a/TccLulu-war/web/matriz.xhtml
+++ b/TccLulu-war/web/matriz.xhtml
@@ -17,7 +17,7 @@
                         <p:panel header="Matriz de cursos"> 
                             <h:form>
                                 <p:growl id="growl" life="2000" />     
-                                <p:commandButton value="Incluir" id="incluir"  action="curso"/>
+                                <p:commandButton value="Incluir" id="incluir"  action="incluir_curso"/>
                                 <p:commandButton value="Editar" id="editar" action="editar"/>                        
                                 <p:commandButton value="Excluir" id="excluir" update="growl" actionListener="#{buttonView.buttonAction}" styleClass="ui-priority-primary" />
                                 <p:commandButton value="Inscritos" id="inscritos" action="inscritos" />
@@ -40,8 +40,8 @@
                                 <p:column headerText="Nome" filterBy="#{curso.lista}">
                                     <h:outputText value="#{curso.nome}"/>
                                 </p:column>
-                                <p:column headerText="Local">
-                                    <h:outputText value="#{curso.local}"/>
+                                <p:column headerText="Sala">
+                                    <h:outputText value="#{curso.sala}"/>
                                 </p:column>
                                 <p:column headerText="Duração">
                                     <h:outputText value="#{curso.duracao}"/>
