--- a/TccLulu-war/web/padrao.xhtml
+++ b/TccLulu-war/web/padrao.xhtml
@@ -9,7 +9,7 @@
         <h:head>
             <f:facet name="first">
                 <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
-                <title>CURSOS</title>
+                <title>SGCI</title>
             </f:facet>
         </h:head>
 
@@ -40,6 +40,8 @@
                         <p:submenu label="CADASTROS">
                             <p:menuitem value="Usuários" outcome="usuario"/>
                             <p:menuitem value="Salas" outcome="sala"/>
+                        </p:submenu>
+                        <p:submenu label="SAIR">                           
                         </p:submenu>
                     </p:menu>
                 </h:form>              
