--- a/TccLulu-war/web/usuario.xhtml
+++ b/TccLulu-war/web/usuario.xhtml
@@ -1,31 +1,13 @@
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">     
-    <ui:composition template="/padrao.xhtml">
-        <ui:define name="centro">
-            <center margin-top='-200' style="top:-500px;position: relative">
-
-                <h:form id="formulario">
-                    <p:messages autoUpdate="true"/>
-                    <h:panelGrid>
-                        <p:panel header="Incluir USUÁRIOS">
-                            <h:panelGrid columns="2">
-                                <h:outputLabel value="Login"/>
-                                <p:inputText id="nome" value="#{usuarioMNG.login}"/> 
-                                <h:outputLabel value="Senha"/>
-                                <p:inputText id="senha" value="#{usuarioMNG.senha}"/>                               
-                                <p:commandButton value="GRAVAR" action="#{usuarioMNG.save}"/>
-                                <p:commandButton value="LIMPAR" type="reset"/> 
-                            </h:panelGrid>
-
-                        </p:panel> 
-                    </h:panelGrid>
-                </h:form>
-         </center>
-
-        </ui:define>
-    </ui:composition>
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
+    <h:head>
+        <title>Facelet Title</title>
+    </h:head>
+    <h:body>
+        Hello from Facelets
+    </h:body>
 </html>
 
+fazer a lista dos usuarios
