--- a/TccLulu-war/web/matriz.xhtml
+++ b/TccLulu-war/web/matriz.xhtml
@@ -11,12 +11,12 @@
 
 
 
-                <h:form id="formulario">
+                <h:form id="formulario" >
                     <p:messages autoUpdate="true"/>
                     <h:panelGrid>
                         <p:panel header="Matriz de cursos"> 
                             <h:form>
-                                <p:growl id="growl" life="2000" />     
+                                <p:growl id="growl" life="1000" />     
                                 <p:commandButton value="Incluir" id="incluir"  action="incluir_curso"/>
                                 <p:commandButton value="Editar" id="editar" action="editar"/>                        
                                 <p:commandButton value="Excluir" id="excluir" update="growl" actionListener="#{buttonView.buttonAction}" styleClass="ui-priority-primary" />
@@ -26,13 +26,13 @@
                             </h:form>  
 
                             <p:dataTable id="curso" value="#{cursoMNG.lista}" emptyMessage="Não há registros" var="curso" paginator="true" rows="4" rowKey="#{curso.id}">
-                                <p:column selectionMode="single" style="width:16px;text-align:center"/>
-                                <p:column headerText="Data Inicio">
+                                <p:column selectionMode="single" style="width:15px;text-align:center"/>
+                                <p:column style="width:95px" headerText="Data Inicio">
                                     <h:outputText value="#{curso.data_inicio}">
                                         <f:convertDateTime pattern="dd/MM/yyyy"/>
                                     </h:outputText>
                                 </p:column>
-                                <p:column headerText="Data Fim">
+                                <p:column style="width:95px" headerText="Data Fim">
                                     <h:outputText value="#{curso.data_fim}">
                                         <f:convertDateTime pattern="dd/MM/yyyy"/>
                                     </h:outputText>
@@ -40,16 +40,16 @@
                                 <p:column headerText="Nome" filterBy="#{curso.lista}">
                                     <h:outputText value="#{curso.nome}"/>
                                 </p:column>
-                                <p:column headerText="Sala">
+                                <p:column style="width:130px" headerText="Sala">
                                     <h:outputText value="#{curso.sala}"/>
                                 </p:column>
-                                <p:column headerText="Duração">
+                                <p:column style="width:95px" headerText="Horas">
                                     <h:outputText value="#{curso.duracao}"/>
                                 </p:column>
-                                <p:column headerText="Quantidade Vagas">
+                                <p:column style="width:95px" headerText="Vagas">
                                     <h:outputText value="#{curso.qtdVagas}"/>
                                 </p:column>                           
-                                <p:column headerText="Público alvo" filterBy="#{cursoMNG.lista}">
+                                <p:column style="width:130px" headerText="Público alvo" filterBy="#{cursoMNG.lista}">
                                     <h:outputText value="#{curso.pub_alvo}"/>
                                 </p:column>
                             </p:dataTable>
