--- a/TccLulu-war/web/padrao.xhtml
+++ b/TccLulu-war/web/padrao.xhtml
@@ -40,6 +40,8 @@
                         <p:submenu label="CADASTROS">
                             <p:menuitem value="Usuários" outcome="usuario"/>
                             <p:menuitem value="Salas" outcome="sala"/>
+                            <p:menuitem value="Setores" outcome="setor"/>
+                            <p:menuitem value="Colaboradores" outcome="pessoa"/>
                         </p:submenu>
                         <p:submenu label="SAIR">                           
                         </p:submenu>
