--- a/TccLulu-war/web/curso_externo.xhtml
+++ b/TccLulu-war/web/curso_externo.xhtml
@@ -14,15 +14,22 @@
                     <h:panelGrid>
                         <p:panel header="INCLUIR CURSO EXTERNO">
                             <h:panelGrid columns="2">
-                                
-                                <p:selectOneMenu id="usuario" converter="salaConverter" value="#{cursoMNG.sala}">
-                                      <f:selectItems value="#{cursoMNG.salas}" var ="vSala"
-                                               itemLabel="#{vSala.nome}"
-                                               itemValue="#{vSala}"/>
-                                </p:selectOneMenu>               
-                                
-                                <p:commandButton value="GRAVAR" actionListener="#{cursoMNG.save}" ajax="false"/>
-                                <p:commandButton value="LIMPAR" type="reset"/> 
+
+                                <h:form enctype="multipart/form-data">
+                                    <p:growl id="messages" showDetail="true" />
+                                    <p:outputLabel value="Colaborador"/>
+                                    <p:selectOneMenu id="pessoa" converter="pessoaConverter" value="#{curso_externoMNG.pessoa}">
+                                        <f:selectItems value="#{curso_externoMNG.pessoas}" var ="vPessoa"
+                                                       itemLabel="#{vPessoa.nome}"
+                                                       itemValue="#{vPessoa}"/>
+                                    </p:selectOneMenu>
+                                    <p:fileUpload value="#{fileUploadView.arquivo}" mode="simple" />
+                                    <p:commandButton value="GRAVAR" ajax="false" actionListener="#{fileUploadView.upload}" />
+                                    <p:commandButton value="LIMPAR" type="reset"/> 
+                                </h:form>        
+
+
+
                             </h:panelGrid>
                         </p:panel>
                     </h:panelGrid> 
