--- a/TccLulu-war/web/incluir_usuario.xhtml
+++ b/TccLulu-war/web/incluir_usuario.xhtml
@@ -11,15 +11,14 @@
                     <p:messages autoUpdate="true"/>
                     <h:panelGrid>
                         <p:panel header="Incluir USUÁRIOS">
-                            <h:panelGrid columns="2">
-                                //tem que ter o nome completo e um grupo de permissão
+                            <h:panelGrid columns="2">                             
                                 <h:outputLabel value="Login"/>
                                 <p:inputText id="nome" value="#{usuarioMNG.login}"/> 
                                 <h:outputLabel value="Senha"/>
                                 <p:inputText id="senha" value="#{usuarioMNG.senha}"/>                               
-                                <p:commandButton value="GRAVAR" action="#{usuarioMNG.save}"/>
+                                <p:commandButton value="GRAVAR" actionListener="#{usuarioMNG.save}" ajax="false"/>
                                 <p:commandButton value="LIMPAR" type="reset"/> 
-                                <p:commandButton value="CANCELAR" type="reset"/> TEM Q VOLTAR PARA A LISTA DE USUARIOS
+                                <p:commandButton value="CANCELAR" id="cancelar"  action="usuario"/> 
                             </h:panelGrid>
 
                         </p:panel> 
