--- a/TccLulu-war/web/pessoa.xhtml
+++ b/TccLulu-war/web/pessoa.xhtml
@@ -13,7 +13,7 @@
                     <p:messages autoUpdate="true"/>
                     <h:panelGrid>
                         <p:panel header="CADASTRO DE COLABORADORES">
-                          <h:form>
+                            <h:form>
                                 <p:growl id="growl" life="2000" />     
                                 <p:commandButton value="Incluir" id="incluir"  action="incluir_pessoa"/>
                                 <p:commandButton value="Editar" id="editar" update="growl" actionListener="#{buttonView.buttonAction}" styleClass="ui-priority-primary" />
@@ -22,9 +22,15 @@
                         </p:panel>
 
                         <p:dataTable id="sala" value="#{pessoaMNG.lista}" emptyMessage="Não há registros" var="pessoa" paginator="true" rows="4" style="width: 820px">
-                             <p:column headerText="Nome" filterBy="#{pessoa.lista}">
-                                    <h:outputText value="#{pessoa.nome}"/>
-                                </p:column>
+                            <p:column headerText="Nome" filterBy="#{pessoa.lista}">
+                                <h:outputText value="#{pessoa.nome}"/>
+                            </p:column>
+                            <p:column headerText="Cargo">
+                                <h:outputText value="#{pessoa.cargo}"/>
+                            </p:column>                            
+                            <p:column headerText="Setor">
+                                <h:outputText value="#{pessoa.setor}"/>
+                            </p:column>
                         </p:dataTable>
 
                     </h:panelGrid> 
