--- a/TccLulu-war/web/usuario.xhtml
+++ b/TccLulu-war/web/usuario.xhtml
@@ -23,7 +23,7 @@
 
                         <p:dataTable id="usuario" value="#{usuarioMNG.lista}" emptyMessage="Não há registros" var="usuario" paginator="true" rows="4" style="width: 820px">
                              <p:column headerText="Nome" filterBy="#{usuario}">
-                                    <h:outputText value="#{usuario.nome}"/>
+                                    <h:outputText value="#{usuarioMNG.login}"/>
                                 </p:column>
                         </p:dataTable>
 
