--- a/TccLulu-war/web/incluir_curso.xhtml
+++ b/TccLulu-war/web/incluir_curso.xhtml
@@ -19,7 +19,7 @@
                                 <h:outputLabel value="Público Alvo"/>
                                 <p:inputText id="pub_alvo" value="#{cursoMNG.pub_alvo}"/> 
                                 <h:outputLabel value="Quantidade Vagas"/>
-                                <p:inputText id="qtdVagas" value="#{cursoMNG.qtdVagas}"/>
+                                <p:inputText id="qtd_vagas" value="#{cursoMNG.qtd_vagas}"/>
                                 <h:outputLabel value="Duração"/>
                                 <p:inputText id="duracao" value="#{cursoMNG.duracao}"/> 
                                 <p:outputLabel  value="Local"/> 
