--- a/TccLulu-war/web/padrao.xhtml
+++ b/TccLulu-war/web/padrao.xhtml
@@ -23,12 +23,12 @@
                             <p:menuitem value="Matriz de cursos" outcome="matriz" />                            
                         </p:submenu>
                         <p:submenu label="CURRÍCULO">
-                            <p:menuitem value="Incluir curso externo" outcome="curso_externo"/>
+                            <p:menuitem value="Incluir curso externo" outcome="incluir_cursoExterno"/>
                             <p:menuitem value="Relatório de horas" />
                             <p:menuitem value="Certificados" />                    
                         </p:submenu>
                         <p:submenu label="BIBLOTECA VIRTUAL">
-                            <p:menuitem value="Vídeos" />
+                            <p:menuitem value="Vídeos" outcome="video"/>
                             <p:menuitem value="Monografias" />
                             <p:menuitem value="TCC's" />                    
                         </p:submenu>                       
